# adsctl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  RELEASE.md  TESTING.md  Taskfile.yml  pyproject.toml
.github/workflows/: pre-commit.yml  test.yml
adsctl/: prompt.py
requirements/: linting.in  linting.txt  pyproject.txt
src/adsctl/: __about__.py  __init__.py  app.py  application.py  client.py  parse.py  prompt.py  queries.py
src/adsctl/api/: utils.py
src/adsctl/api/asset/: image.py
src/adsctl/api/campaign/: budget.py  main.py  status.py
src/adsctl/cli/: app.py  auth.py  cli.py  config.py  update.py  utils.py
src/adsctl/cli/create/: asset.py  main.py
src/adsctl/cli/edit/: campaign.py  edit.py  main.py
src/adsctl/cli/edit/campaign/: budget.py
src/adsctl/cli/get/: ad_group.py  campaign.py  main.py
src/adsctl/config/: __init__.py  config_file.py  model.py  utils.py
src/adsctl/prompt/: cli.py  completer.py  key_bindings.py  prompt.py
src/adsctl/utils/: fs.py  googleads.py
tests/: __init__.py  conftest.py  test_config_file.py  test_parse.py  test_pkg.py
tests/templates/: config_1.toml  config_invalid_id.toml
