[project]
name = "adsctl"
description = "Google Ads Control CLI and Prompt"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [{ name = "Daniel Rodriguez", email = "daniel@danielfrg.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "google-ads>=20.0.0",
  "click>=8.1",
  "prettytable>=3.6.0",
  "prompt_toolkit>=3.0.38",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/danielfrg/adsctl#readme"
Issues = "https://github.com/danielfrg/adsctl/issues"
Source = "https://github.com/danielfrg/adsctl"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
gaql = "adsctl.prompt:main"
adsctl = "adsctl.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/adsctl/__about__.py"

[tool.hatch.envs.default]
features = ["test"]
dependencies = ["black", "isort", "flake8", "pylint"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/adsctl --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/adsctl/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
